[gd_scene load_steps=9 format=3 uid="uid://dcl1tc71mvf4q"]

[ext_resource type="Script" uid="uid://gnwiq0658ddo" path="res://Scripts/zombie.gd" id="1_4c67f"]
[ext_resource type="PackedScene" uid="uid://m5786qdg12c8" path="res://Scenes/Particles/BloodParticleEmitter.tscn" id="2_8rqyt"]
[ext_resource type="Script" uid="uid://dj0qh3hrje81q" path="res://Components/Health.gd" id="2_84odx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_84odx"]
size = Vector2(24, 56)

[sub_resource type="Shader" id="Shader_3m754"]
code = "shader_type canvas_item;

void fragment() {
    if (COLOR.a > 0.0) {
        COLOR = vec4(1.0, 1.0, 1.0, 1.0);
    }
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8rqyt"]
shader = SubResource("Shader_3m754")

[sub_resource type="Gradient" id="Gradient_110e2"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(0, 1, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_8rqyt"]
gradient = SubResource("Gradient_110e2")
width = 24
height = 56

[node name="Zombie" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_4c67f")

[node name="Hitbox" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_84odx")

[node name="Texture" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_8rqyt")
use_parent_material = true
texture = SubResource("GradientTexture2D_8rqyt")

[node name="BlockCheck" type="RayCast2D" parent="."]
position = Vector2(0, 28)
target_position = Vector2(0, 0)

[node name="BlockCheck2" type="RayCast2D" parent="."]
position = Vector2(0, -4)
target_position = Vector2(0, 0)

[node name="BlockCheck3" type="RayCast2D" parent="."]
position = Vector2(0, -36)
target_position = Vector2(0, 0)

[node name="Healthbar" type="ColorRect" parent="."]
offset_left = -21.0
offset_top = -36.0
offset_right = 21.0
offset_bottom = -32.0
color = Color(1, 0, 0.501961, 1)

[node name="Healthbar_Foreground" type="ColorRect" parent="Healthbar"]
layout_mode = 0
offset_right = 42.0
offset_bottom = 4.0
color = Color(0, 1, 0.501961, 1)

[node name="Components" type="Node2D" parent="."]

[node name="Health" type="Node2D" parent="Components"]
script = ExtResource("2_84odx")
metadata/_custom_type_script = "uid://dj0qh3hrje81q"

[node name="Particles" type="Node2D" parent="."]

[node name="Blood_Particle_Emitter" parent="Particles" instance=ExtResource("2_8rqyt")]
